--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 * {
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 
 html, body{
-	background: #000000;
 	height: 100%;
 }
 
 .flex-container {
+	background: #000000;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -16,18 +17,31 @@ html, body{
 	height: 100%;
 }
 
+/*
 .icon {
 	color: #ffffff;
 	font-size: 50vmin;
+}
+*/
+
+.dp-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.dp {
+	border-radius: 50%;
+	width: 30%;
 }
 
 .text {
 	color: #ffffff;
 }
 
-h1.text{
+h1.text {
 	font-size: 9vmin;
 }
-h2.text{
-	font-size: 6vmin;
+h2.text {
+	font-size: 3vmin;
 }
