--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ html, body{
 	height: 100%;
 }
 
-
 .dp-container {
 	display: flex;
 	justify-content: center;
@@ -28,18 +27,47 @@ html, body{
 
 .dp {
 	border-radius: 50%;
-	width: 50vmax;
+	width: 50vmin;
 }
 
-.text {
+.desc {
 	color: #ffffff;
 }
 
-h1.text {
+h1.desc {
 	font-size: 12vmin;
 }
-h2.text {
+
+h2.desc {
 	font-size: 3vmin;
+}
+
+.desc a:active, .desc a:visited, .desc a:hover {
+	transition: all 0.3s ease-in-out;
+	color: #fff;
+	text-decoration: none;
+}
+
+.desc a{
+
+    position: relative;
+}
+
+.desc a::before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0;
+	left: 1;
+	background-color: #FFF;
+	visibility: hidden;
+	transform: scaleX(0);
+	transition: all 0.3s ease-in-out;
+}
+.desc a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 
@@ -49,10 +77,11 @@ h2.text {
     --fbcolor: #3b5998; 
     --discordcolor: #7289d9;
     --linkedincolor: #0076a8;
-
     --githubcolor: #211f1f;
     --mailcolor: #555555;
 }
+
+
 .contact ul li a i.fa-facebook-f {
     color: var(--fbcolor) !important;
 }
@@ -66,7 +95,6 @@ h2.text {
     color: var(--linkedincolor) !important;
 }
 
-
 .contact ul {
     display: flex;
     margin-top: 10px;
@@ -75,23 +103,28 @@ h2.text {
 
 .contact ul li {
     list-style: none;
-
 }
-
 
 .contact ul li a {
     width: 10vmin;
     height: 10vmin;
     background-color: #fff;
-    font-size: 5vmin;
-    margin: 0 10px;
+    font-size: 6vmin;
+    margin: 0 2vmin;
     display: block;
     border-radius: 50%;
     position: relative;
     overflow: hidden;
-    border: 3px solid #fff;
+    border: 1vmin solid #fff;
     z-index: 1;
-    text-align: center;
+    text-decoration: none;
+}
+.contact a .icon-container{
+	display: flex;
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
 }
 
 .contact ul li a .icon {
@@ -99,10 +132,9 @@ h2.text {
     color: #363636;
     transition: .5s;
     z-index: 3;
-   	vertical-align: middle;
 }
 
-.contact ul li a:before {
+.contact ul li a::before {
     content: "";
     position: absolute;
     top: 100%;
@@ -115,44 +147,27 @@ h2.text {
 }
 
 .contact li a:hover .icon {
-    color: #fff;
+    color: #fff !important;
     transform: rotateY(360deg);
 }
 
-.contact ul li a:hover:before {
+.contact ul li a:hover::before {
     top: 0;
 }
 
 
-.contact ul li.fb a:before{
+.contact ul li.fb a::before {
     background: var(--fbcolor);
 }
-.contact ul li.discord a:before{
+.contact ul li.discord a::before{
     background: var(--discordcolor)
 }
-.contact ul li.linkedin a:before {
+.contact ul li.linkedin a::before {
     background: var(--linkedincolor);
 } 
-.contact ul li.github a:before {
+.contact ul li.github a::before {
     background: var(--githubcolor);
 }
-.contact ul li.mail a:before {
+.contact ul li.mail a::before {
     background: var(--mailcolor);
 }
-
-.contact ul li a:hover .fa-facebook-f {
-    color: #ffffff !important;
-}
-.contact ul li a:hover i.fa-discord {
-    color: #ffffff !important;
-}
-.contact ul li a:hover i.fa-github {
-    color: #ffffff !important;
-}
-.contact ul li a:hover i.fa-linkedin-in {
-    color: #ffffff !important;
-}
-
-
-
-*/
