--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,52 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,600);
+
+
+
+:root {
+    --fbcolor: #3b5998; 
+    --discordcolor: #7289d9;
+    --linkedincolor: #0076a8;
+    --githubcolor: #211f1f;
+    --mailcolor: #555555;
+    --bgcolor: #080808;
+}
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
-html, body{
-	height: 100%;
-	overflow: hidden;
-
+html, body {
+	height: 100vh;
+	width: 100%;
+	font-family: 'Lato', sans-serif;
+	/*overflow: hidden;*/
+	background-color: var(--bgcolor);
+	position: relative;
 }
 
-.flex-container {
-	background: #000000;
+#particles-js {
+	height: 100%;
+	width: 100%;
+	background: var(--bgcolor);
+	z-index: -1;
+}
+
+.flex-container{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
+	height: 100vh;
+	overflow: hidden;
+	margin-top: -100vh;
 }
-
 .dp-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 100
 }
 
 .dp {
@@ -36,10 +60,13 @@ html, body{
 
 h1.desc {
 	font-size: 12vmin;
+	margin-bottom: 0;
 }
 
 h2.desc {
-	font-size: 3vmin;
+	padding-top: 0;
+	margin-top: 0;
+	font-size: 4vmin;
 }
 
 .desc a:active, .desc a:visited, .desc a:hover {
@@ -63,22 +90,17 @@ h2.desc {
 	background-color: #FFF;
 	visibility: hidden;
 	transform: scaleX(0);
-	transition: all 0.3s ease-in-out;
+	transition: all 0.5s ease-in-out;
+	opacity: 0.3;
 }
 .desc a:hover::before {
   visibility: visible;
+  opacity: 0.7;
   transform: scaleX(1);
 }
 
-
-
-/* Contact Icons */
-:root {
-    --fbcolor: #3b5998; 
-    --discordcolor: #7289d9;
-    --linkedincolor: #0076a8;
-    --githubcolor: #211f1f;
-    --mailcolor: #555555;
+.contact{
+	margin-top: 10px
 }
 
 
@@ -108,14 +130,19 @@ h2.desc {
 .contact ul li a {
     width: 10vmin;
     height: 10vmin;
-    background-color: #fff;
-    font-size: 6vmin;
+    font-size: 5vmin;
+    
+    /*width: 65px;
+    height: 65px;
+    font-size: 30px;
+    */
+    background-color: #ddd;
     margin: 0 2vmin;
     display: block;
     border-radius: 50%;
     position: relative;
     overflow: hidden;
-    border: 1vmin solid #fff;
+    border: 1vmin solid #efefef;
     z-index: 1;
     text-decoration: none;
 }
@@ -146,6 +173,7 @@ h2.desc {
     z-index: 2;
 }
 
+
 .contact li a:hover .icon {
     color: #fff !important;
     transform: rotateY(360deg);
@@ -159,7 +187,7 @@ h2.desc {
 .contact ul li.fb a::before {
     background: var(--fbcolor);
 }
-.contact ul li.discord a::before{
+.contact ul li.discord a::before {
     background: var(--discordcolor)
 }
 .contact ul li.linkedin a::before {
